[gd_scene load_steps=8 format=3 uid="uid://c8l86j1se46vx"]

[ext_resource type="Script" path="res://levels/main menu/MainMenu.gd" id="1_01vit"]
[ext_resource type="Texture2D" uid="uid://7y6rv7ikausa" path="res://assets/GUI/Fantasy Wooden GUI  Free/PNG/UI board Large  stone.png" id="2_cueci"]
[ext_resource type="Texture2D" uid="uid://bvndp6yl7oft" path="res://assets/GUI/Fantasy Wooden GUI  Free/PNG/UI board Large  parchment.png" id="3_7osbe"]
[ext_resource type="Theme" uid="uid://wvho8120pnwa" path="res://assets/buttons/mainMenuButtons.tres" id="4_tk60r"]
[ext_resource type="FontFile" uid="uid://cr28ssm3siwlg" path="res://assets/fonts/Arapix.otf" id="5_bakcj"]
[ext_resource type="AudioStream" uid="uid://cd0051yvy5fsm" path="res://assets/gui sounds/Click - Sound Effect (HD).mp3" id="5_qs7ho"]
[ext_resource type="Texture2D" uid="uid://c21kmclkevh47" path="res://assets/GUI/Fantasy Wooden GUI  Free/PNG/UI board Small  parchment.png" id="7_43gan"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_01vit")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UiBoardLargeStone" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(585, 342)
scale = Vector2(1.30823, 1.30823)
texture = ExtResource("2_cueci")

[node name="UiBoardLargeParchment" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(578, 329)
scale = Vector2(1.05696, 1.05696)
texture = ExtResource("3_7osbe")

[node name="continue" type="Button" parent="CanvasLayer"]
offset_left = 448.0
offset_top = 192.0
offset_right = 658.0
offset_bottom = 280.0
theme = ExtResource("4_tk60r")
theme_override_fonts/font = ExtResource("5_bakcj")
theme_override_font_sizes/font_size = 40
text = "أكمل اللعبة"

[node name="quit" type="Button" parent="CanvasLayer"]
offset_left = 448.0
offset_top = 424.0
offset_right = 661.0
offset_bottom = 512.0
theme = ExtResource("4_tk60r")
theme_override_fonts/font = ExtResource("5_bakcj")
theme_override_font_sizes/font_size = 40
text = "اغلاق"

[node name="play" type="Button" parent="CanvasLayer"]
offset_left = 448.0
offset_top = 304.0
offset_right = 662.0
offset_bottom = 400.0
theme = ExtResource("4_tk60r")
theme_override_fonts/font = ExtResource("5_bakcj")
theme_override_font_sizes/font_size = 40
text = "لعبة جديدة"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("5_qs7ho")

[node name="popupMessage" type="ColorRect" parent="."]
visible = false
offset_left = -232.0
offset_top = -176.0
offset_right = 1384.0
offset_bottom = 848.0
color = Color(0, 0, 0, 0.698039)

[node name="UiBoardSmallParchment" type="Sprite2D" parent="popupMessage"]
position = Vector2(776, 496)
texture = ExtResource("7_43gan")

[node name="Label" type="Label" parent="popupMessage/UiBoardSmallParchment"]
offset_left = -200.0
offset_top = -48.0
offset_right = 225.0
offset_bottom = 12.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_bakcj")
theme_override_font_sizes/font_size = 60
text = "لا يوجد لعبة محفوطة بالجهاز"

[node name="Button4" type="Button" parent="popupMessage"]
layout_mode = 0
offset_left = 672.0
offset_top = 528.0
offset_right = 880.0
offset_bottom = 584.0
theme = ExtResource("4_tk60r")
theme_override_fonts/font = ExtResource("5_bakcj")
theme_override_font_sizes/font_size = 40
text = "حسنًا"

[connection signal="pressed" from="CanvasLayer/continue" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/quit" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/play" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="popupMessage/Button4" to="." method="_on_button_4_pressed"]
